--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ body {
     background-size: cover;
     background-position: top;
     position: relative;
-
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
 }
 
@@ -57,6 +56,7 @@ body {
 .heading-primary {
     color:#fff;
     text-transform: uppercase;
+    backface-visibility: hidden; /* the backface is the container of the transforming elements. */
 }
 
 .heading-primary-main {
@@ -64,6 +64,15 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+
+    /*
+    animation-iteration-count: 3;
+    animation-delay: 3s;
+    */
 }
 
 .heading-primary-sub {
@@ -71,4 +80,43 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+
+    /*
+    animation-name: moveInRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    */
+    animation: moveInRight 1s ease-in;
+}
+
+@keyframes moveInLeft { /* must be done relative to the position of the element */
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
 }
