--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,14 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .heading-primary {
     color:#fff;
     text-transform: uppercase;
     backface-visibility: hidden; /* the backface is the container of the transforming elements. */
+    margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -79,7 +81,7 @@ body {
     display: block;
     font-size: 20px;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 15px;
 
     /*
     animation-name: moveInRight;
@@ -119,4 +121,56 @@ body {
         opacity: 1;
         transform: translate(0);
     }
+}
+
+/* the :link, :visited is a psuedo-class. Psuedo-class is a an element under a special condition. */
+.btn:link, .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+    position: relative; /* this is for the psuedo element since it is a 'child' element. */
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
+}
+
+/* Psuedo element all us the style certain parts of the element. it treated like a child of the button element. */
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: #fff;
+}
+
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6); 
+    opacity: 0;
 }
